syntax = "proto3";

package bridge;

option go_package = "github.com/paul-hammant/tsyne/bridge/proto";

// BridgeService provides high-performance binary protocol for Tsyne bridge
service BridgeService {
  // Window operations
  rpc CreateWindow(CreateWindowRequest) returns (Response);
  rpc ShowWindow(ShowWindowRequest) returns (Response);
  rpc SetContent(SetContentRequest) returns (Response);
  rpc ResizeWindow(ResizeWindowRequest) returns (Response);
  rpc SetWindowTitle(SetWindowTitleRequest) returns (Response);
  rpc CenterWindow(CenterWindowRequest) returns (Response);
  rpc SetWindowFullScreen(SetWindowFullScreenRequest) returns (Response);

  // Widget creation
  rpc CreateImage(CreateImageRequest) returns (Response);
  rpc CreateLabel(CreateLabelRequest) returns (Response);
  rpc CreateButton(CreateButtonRequest) returns (Response);
  rpc CreateEntry(CreateEntryRequest) returns (Response);
  rpc CreateVBox(CreateVBoxRequest) returns (Response);
  rpc CreateHBox(CreateHBoxRequest) returns (Response);
  rpc CreateCheckbox(CreateCheckboxRequest) returns (Response);
  rpc CreateSelect(CreateSelectRequest) returns (Response);

  // Container creation
  rpc CreateScroll(CreateScrollRequest) returns (Response);
  rpc CreateGrid(CreateGridRequest) returns (Response);
  rpc CreateCenter(CreateCenterRequest) returns (Response);
  rpc CreateClip(CreateClipRequest) returns (Response);
  rpc CreateMax(CreateMaxRequest) returns (Response);
  rpc CreateStack(CreateStackRequest) returns (Response);
  rpc CreateCard(CreateCardRequest) returns (Response);
  rpc CreateAccordion(CreateAccordionRequest) returns (Response);
  rpc CreateForm(CreateFormRequest) returns (Response);
  rpc CreateBorder(CreateBorderRequest) returns (Response);
  rpc CreateGridWrap(CreateGridWrapRequest) returns (Response);
  rpc CreateAdaptiveGrid(CreateAdaptiveGridRequest) returns (Response);
  rpc CreatePadded(CreatePaddedRequest) returns (Response);
  rpc CreateSplit(CreateSplitRequest) returns (Response);
  rpc CreateTabs(CreateTabsRequest) returns (Response);
  rpc CreateDocTabs(CreateDocTabsRequest) returns (Response);
  rpc CreateThemeOverride(CreateThemeOverrideRequest) returns (Response);
  rpc CreateInnerWindow(CreateInnerWindowRequest) returns (Response);
  rpc CreateNavigation(CreateNavigationRequest) returns (Response);
  rpc CreatePopup(CreatePopupRequest) returns (Response);
  rpc CreateMultipleWindows(CreateMultipleWindowsRequest) returns (Response);

  // Resources
  rpc RegisterResource(RegisterResourceRequest) returns (Response);
  rpc UnregisterResource(UnregisterResourceRequest) returns (Response);

  // Widget updates
  rpc UpdateImage(UpdateImageRequest) returns (Response);
  rpc SetText(SetTextRequest) returns (Response);
  rpc GetText(GetTextRequest) returns (GetTextResponse);
  rpc SetProgress(SetProgressRequest) returns (Response);
  rpc GetProgress(GetProgressRequest) returns (GetProgressResponse);
  rpc SetChecked(SetCheckedRequest) returns (Response);
  rpc GetChecked(GetCheckedRequest) returns (GetCheckedResponse);

  // Interactions
  rpc ClickWidget(ClickWidgetRequest) returns (Response);
  rpc TypeText(TypeTextRequest) returns (Response);
  rpc DoubleTapWidget(DoubleTapWidgetRequest) returns (Response);
  rpc RightClickWidget(RightClickWidgetRequest) returns (Response);
  rpc DragWidget(DragWidgetRequest) returns (Response);

  // Custom IDs
  rpc RegisterCustomId(RegisterCustomIdRequest) returns (Response);

  // Queries
  rpc FindWidget(FindWidgetRequest) returns (FindWidgetResponse);
  rpc GetWidgetInfo(GetWidgetInfoRequest) returns (WidgetInfoResponse);
  rpc GetAllWidgets(GetAllWidgetsRequest) returns (GetAllWidgetsResponse);

  // Events (streaming)
  rpc SubscribeEvents(EventSubscription) returns (stream Event);

  // Lifecycle
  rpc Quit(QuitRequest) returns (Response);
}

// Common response message
message Response {
  bool success = 1;
  string error = 2;
  map<string, string> result = 3;
}

// Window operations
message CreateWindowRequest {
  string window_id = 1;
  string title = 2;
  int32 width = 3;
  int32 height = 4;
  bool fixed_size = 5;
}

message ShowWindowRequest {
  string window_id = 1;
}

message SetContentRequest {
  string window_id = 1;
  string widget_id = 2;
}

message ResizeWindowRequest {
  string window_id = 1;
  int32 width = 2;
  int32 height = 3;
}

message SetWindowTitleRequest {
  string window_id = 1;
  string title = 2;
}

message CenterWindowRequest {
  string window_id = 1;
}

message SetWindowFullScreenRequest {
  string window_id = 1;
  bool fullscreen = 2;
}

// Fill mode options for images
enum ImageFillMode {
  IMAGE_FILL_ORIGINAL = 0;  // Original size (default)
  IMAGE_FILL_CONTAIN = 1;   // Scale to fit within bounds
  IMAGE_FILL_STRETCH = 2;   // Stretch to fill bounds
}

// Widget creation messages
message CreateImageRequest {
  string widget_id = 1;
  oneof source {
    bytes inline_data = 2;      // Raw PNG/JPEG bytes
    string resource_name = 3;   // Reference to registered resource
    string path = 9;            // File path or data URL
  }
  int32 width = 4;
  int32 height = 5;
  string callback_id = 6;       // Click callback
  string drag_callback_id = 7;  // Drag callback
  string double_tap_callback_id = 8; // Double tap callback
  ImageFillMode fill_mode = 10; // How to scale/fill the image
  string drag_end_callback_id = 11; // Drag end callback
}

// Text alignment options for labels
enum TextAlignment {
  TEXT_ALIGN_LEADING = 0;   // Left-aligned (default)
  TEXT_ALIGN_CENTER = 1;    // Center-aligned
  TEXT_ALIGN_TRAILING = 2;  // Right-aligned
}

// Text wrapping options for labels
enum TextWrapping {
  TEXT_WRAP_OFF = 0;        // No wrapping (default)
  TEXT_WRAP_TRUNCATE = 1;   // Truncate with ellipsis
  TEXT_WRAP_WORD = 2;       // Wrap at word boundaries
}

message CreateLabelRequest {
  string widget_id = 1;
  string text = 2;
  bool bold = 3;
  TextAlignment alignment = 4;
  bool italic = 5;
  bool monospace = 6;
  TextWrapping wrapping = 7;
}

// Button importance levels
enum ButtonImportance {
  BUTTON_IMPORTANCE_MEDIUM = 0;  // Default
  BUTTON_IMPORTANCE_LOW = 1;
  BUTTON_IMPORTANCE_HIGH = 2;
  BUTTON_IMPORTANCE_WARNING = 3;
  BUTTON_IMPORTANCE_SUCCESS = 4;
}

message CreateButtonRequest {
  string widget_id = 1;
  string text = 2;
  string callback_id = 3;
  ButtonImportance importance = 4;
}

message CreateEntryRequest {
  string widget_id = 1;
  string placeholder = 2;
  string callback_id = 3; // Submit callback (OnSubmitted)
  int32 width = 4;
  bool multiline = 5;
  bool password = 6;
  string on_change_callback_id = 7; // OnChanged callback
  string on_cursor_changed_callback_id = 8; // OnCursorChanged callback
  float min_width = 9; // Minimum width for the entry
  string double_click_callback_id = 10; // Double-click callback
}

message CreateVBoxRequest {
  string widget_id = 1;
  repeated string children = 2;  // Child widget IDs
}

message CreateHBoxRequest {
  string widget_id = 1;
  repeated string children = 2;  // Child widget IDs
}

message CreateCheckboxRequest {
  string widget_id = 1;
  string text = 2;
  bool checked = 3;
  string callback_id = 4;
}

message CreateSelectRequest {
  string widget_id = 1;
  repeated string options = 2;
  int32 selected = 3;
  string callback_id = 4;
}

// ============================================================================
// Container creation messages
// ============================================================================

message CreateScrollRequest {
  string widget_id = 1;
  string content_id = 2;  // ID of widget to scroll
}

message CreateGridRequest {
  string widget_id = 1;
  int32 columns = 2;
  repeated string children = 3;
}

message CreateCenterRequest {
  string widget_id = 1;
  string child_id = 2;
}

message CreateClipRequest {
  string widget_id = 1;
  string child_id = 2;
}

message CreateMaxRequest {
  string widget_id = 1;
  repeated string child_ids = 2;
}

message CreateStackRequest {
  string widget_id = 1;
  repeated string child_ids = 2;
}

message CreateCardRequest {
  string widget_id = 1;
  string title = 2;
  string subtitle = 3;
  string content_id = 4;
}

// Accordion item for CreateAccordionRequest
message AccordionItem {
  string title = 1;
  string content_id = 2;
}

message CreateAccordionRequest {
  string widget_id = 1;
  repeated AccordionItem items = 2;
}

// Form item for CreateFormRequest
message FormItem {
  string label = 1;
  string widget_id = 2;
}

message CreateFormRequest {
  string widget_id = 1;
  repeated FormItem items = 2;
  string submit_callback_id = 3;
  string cancel_callback_id = 4;
}

message CreateBorderRequest {
  string widget_id = 1;
  string top_id = 2;
  string bottom_id = 3;
  string left_id = 4;
  string right_id = 5;
  string center_id = 6;
}

message CreateGridWrapRequest {
  string widget_id = 1;
  float item_width = 2;
  float item_height = 3;
  repeated string children = 4;
}

message CreateAdaptiveGridRequest {
  string widget_id = 1;
  int32 rowcols = 2;
  repeated string children = 3;
}

message CreatePaddedRequest {
  string widget_id = 1;
  string child_id = 2;
}

// Split orientation
enum SplitOrientation {
  SPLIT_VERTICAL = 0;    // Default
  SPLIT_HORIZONTAL = 1;
}

message CreateSplitRequest {
  string widget_id = 1;
  SplitOrientation orientation = 2;
  string leading_id = 3;
  string trailing_id = 4;
  float offset = 5;  // 0.0 to 1.0
}

// Tab location
enum TabLocation {
  TAB_LOCATION_TOP = 0;      // Default
  TAB_LOCATION_BOTTOM = 1;
  TAB_LOCATION_LEADING = 2;
  TAB_LOCATION_TRAILING = 3;
}

// Tab item for Tabs and DocTabs
message TabItem {
  string title = 1;
  string content_id = 2;
}

message CreateTabsRequest {
  string widget_id = 1;
  repeated TabItem tabs = 2;
  TabLocation location = 3;
}

message CreateDocTabsRequest {
  string widget_id = 1;
  repeated TabItem tabs = 2;
  string close_callback_id = 3;
  TabLocation location = 4;
}

// Theme variant
enum ThemeVariant {
  THEME_LIGHT = 0;  // Default
  THEME_DARK = 1;
}

message CreateThemeOverrideRequest {
  string widget_id = 1;
  string child_id = 2;
  ThemeVariant variant = 3;
}

message CreateInnerWindowRequest {
  string widget_id = 1;
  string title = 2;
  string content_id = 3;
  string on_close_callback_id = 4;
}

message CreateNavigationRequest {
  string widget_id = 1;
  string root_id = 2;
  string title = 3;
  string on_back_callback_id = 4;
  string on_forward_callback_id = 5;
}

message CreatePopupRequest {
  string widget_id = 1;
  string content_id = 2;
  string window_id = 3;
}

message CreateMultipleWindowsRequest {
  string widget_id = 1;
  repeated string children = 2;
}

// Resource messages
message RegisterResourceRequest {
  string name = 1;
  bytes data = 2;  // Raw image bytes (not base64!)
}

message UnregisterResourceRequest {
  string name = 1;
}

// Widget update messages
message UpdateImageRequest {
  string widget_id = 1;
  oneof source {
    bytes inline_data = 2;
    string resource_name = 3;
  }
}

message SetTextRequest {
  string widget_id = 1;
  string text = 2;
}

message GetTextRequest {
  string widget_id = 1;
}

message GetTextResponse {
  bool success = 1;
  string error = 2;
  string text = 3;
}

message SetProgressRequest {
  string widget_id = 1;
  double value = 2;
}

message GetProgressRequest {
  string widget_id = 1;
}

message GetProgressResponse {
  bool success = 1;
  string error = 2;
  double value = 3;
}

message SetCheckedRequest {
  string widget_id = 1;
  bool checked = 2;
}

message GetCheckedRequest {
  string widget_id = 1;
}

message GetCheckedResponse {
  bool success = 1;
  string error = 2;
  bool checked = 3;
}

// Interaction messages
message ClickWidgetRequest {
  string widget_id = 1;
}

message TypeTextRequest {
  string widget_id = 1;
  string text = 2;
}

message DoubleTapWidgetRequest {
  string widget_id = 1;
}

message RightClickWidgetRequest {
  string widget_id = 1;
}

message DragWidgetRequest {
  string widget_id = 1;
  int32 delta_x = 2;
  int32 delta_y = 3;
}

// Custom ID messages
message RegisterCustomIdRequest {
  string custom_id = 1;
  string widget_id = 2;
}

// Query messages
message FindWidgetRequest {
  string selector = 1;
  string type = 2;  // "text", "id", "type", "exactText"
}

message FindWidgetResponse {
  bool success = 1;
  string error = 2;
  repeated string widget_ids = 3;
}

message GetWidgetInfoRequest {
  string widget_id = 1;
}

message WidgetInfoResponse {
  bool success = 1;
  string error = 2;
  string id = 3;
  string type = 4;
  string text = 5;
  float x = 6;
  float y = 7;
  float width = 8;
  float height = 9;
  bool visible = 10;
  bool enabled = 11;
}

message GetAllWidgetsRequest {
}

message GetAllWidgetsResponse {
  bool success = 1;
  string error = 2;
  repeated WidgetInfo widgets = 3;
}

message WidgetInfo {
  string id = 1;
  string type = 2;
  string text = 3;
}

// Event streaming
message Event {
  string type = 1;        // "callback", "windowClosed", etc.
  string widget_id = 2;
  map<string, string> data = 3;
}

message EventSubscription {
  repeated string event_types = 1;  // Which events to subscribe to
}

// Lifecycle
message QuitRequest {
}
